Wed Sep 22 09:53:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.h:
        * ciao/Containers/Extension/Extension_Container.idl:
        * ciao/Containers/Extension/Extension_Container.inl:
        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Containers/Extension/Extension_Container.mpc:
        * ciao/Containers/Session/Session_Container.h:
          Added ExtensionContainer which is a copy of Session_Container, first
          we need to get all infrastructure and templates in place, after that
          we need to move code to base classes or to derived, than we can
          start adding the real additional code to the Extension_Container

Wed Sep 22 09:20:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Container_Base_T.h:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Contexts/Extension/ExtensionContext_T.h:
        * ciao/Contexts/Extension/ExtensionContext_T.cpp:
        * ciao/Servants/Home_Servant_Impl_Base.h:
        * ciao/Servants/Home_Servant_Impl_Base.cpp:
        * ciao/Servants/Home_Servant_Impl_T.h:
        * ciao/Servants/Home_Servant_Impl_T.cpp:
          Changes for Session_Container

Wed Sep 22 08:52:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Container_Base_T.h:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Contexts/Context_Impl_Base.h:
        * ciao/Contexts/Context_Impl_Base.cpp:
        * ciao/Contexts/Session/Context_Impl_T.h:
        * ciao/Contexts/Session/Context_Impl_T.cpp:
        * ciao/Deployment/Handlers/Container_Handler.cpp:
        * ciao/Servants/Session/Servant_Impl_T.h:
        * ciao/Servants/Session/Servant_Impl_T.cpp:
          Use Session_Container for entry points

Wed Sep 22 08:52:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>
