@@ -1,3 +1,11 @@
+Wed Sep 22 10:07:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Contexts/Extension/ExtensionContext_T.h:
+        * ciao/Contexts/Extension/ExtensionContext_T.cpp:
+        * ciao/Servants/Extension/Servant_Impl_T.h:
+        * ciao/Servants/Extension/Servant_Impl_T.cpp:
+          Some more extension infrastructure
+
 Wed Sep 22 09:53:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Containers/Extension/Extension_Container.h:
